--- a/lsp-guidelines.bib
+++ b/lsp-guidelines.bib
@@ -28,7 +28,7 @@
   year       = {1976}
 }
 
-@book{Bloomfield1933language,
+@book{Bloomfield1933lg,
 	Address = {London},
 	Author = {Leonard Bloomfield},
 	Publisher = {George Allen and Unwin},
@@ -70,7 +70,7 @@
 	Year = {2003}}
 
 
-@book{DM2013a-ed,
+@book{WALS,
   editor    = {Matthew S. Dryer and Martin Haspelmath},
   title     = {WALS Online},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
