--- a/proofreaders.tex
+++ b/proofreaders.tex
@@ -3,11 +3,14 @@ Proofreaders should pay attention to spelling, grammar, style etc. A couple of p
 \begin{itemize}
  \item are all floats referenced?
  \item are all examples referenced?
- \item are the guidelines adhered to? Common oversights include using lower case ``section'', ``table'', or ``figure'' in cross-references instead of capitalizing these words. 
+ \item are the guidelines adhered to? Common oversights include using 
+        lower case ``section'', ``table'', or ``figure'' in cross-references instead of capitalizing these words. 
  \item Spacing after punctuation and parentheses.
  \item Parentheses and brackets in examples should not be italicized. The same is true for most subscripts in examples.
  \item footnotemarks in examples should not be typeset in italics.
 \end{itemize}
+
+Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are all acceptable.
 
 
 
