--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -22,7 +22,8 @@
 % \usepackage{embrac}
 
 % just for the XeLaTeX logo
-\usepackage{dtklogos}\newcommand{\xelatex}{\XeLaTeX\xspace}
+\usepackage{dtklogos}
+% \newcommand{\xelatex}{\XeLaTeX\xspace}
 \newcommand{\bibtex}{\BibTeX\xspace}
 
 \usepackage{LSP/lsp-styles/avm}
@@ -116,7 +117,7 @@
 \include{indexers}
 \include{typesetters} 
 \include{openness}
-% \include{showcases}
+\include{showcases}
 % \include{serieseditors}
 
 \backmatter
