--- a/latexguidelines/showcases.tex
+++ b/latexguidelines/showcases.tex
@@ -45,8 +45,8 @@ Grammaticality judgments can be added in brackets. Note that in this case, brace
 \z
 \end{verbatim}
 
-Lists of examples can be typeset with nested \computer{{\bs}ea}  and \computer{}{\bs}z}  respectively. The example in
-\REF{ex:showcases:list} shows how the sentences can be aligned properly. Note that the first example in a list gets \computer{{\bs}ea}, the subsequent ones get \computer{{\bs}ex}. Also note the empty grammticality judgment for the first example in order to align it with the second example, which has a~*.
+Lists of examples can be typeset with nested \verb+\ea+  and \verb+\z+  respectively. The example in
+\REF{ex:showcases:list} shows how the sentences can be aligned properly. Note that the first example in a list gets \verb+\ea+, the subsequent ones get \verb+\ex+. Also note the empty grammticality judgment for the first example in order to align it with the second example, which has a~*.
 
 
 \ea  \label{ex:showcases:list}
@@ -95,29 +95,29 @@ this as follows:
 \glt `The pilot was deprived of his license to fly.'
 \z 
 \end{verbatim}
-Please call the \computer{{\bs}footnotetext} command before the translation, since otherwise the
+Please call the \verb+\footnotetext+ command before the translation, since otherwise the
 footnotetext may be typeset on a page that is different from the one where the footnotemark is set.\is{footnote|)}
 
-For the typesetting of an additional line with the original script, one may use \computer{{\bs}glll} rather
-than \computer{{\bs}gll}. \REF{ex:shown:chinese} shows a Chinese example:
-\ea
-\label{ex:shown:chinese}
-\glll 狗       叫     了。\\
-      gou3     jiao4   le\\
-      dog      bark    \textsc{asp/crs}\\
-\glt `The dog is barking.'/`The dogs are barking.'
-\z
+% For the typesetting of an additional line with the original script, one may use \verb+\glll+ rather
+% than \verb+\gll+. \REF{ex:shown:chinese} shows a Chinese example:
+% \ea
+% \label{ex:shown:chinese}
+% \glll 狗       叫     了。\\
+%       gou3     jiao4   le\\
+%       dog      bark    \textsc{asp/crs}\\
+% \glt `The dog is barking.'/`The dogs are barking.'
+% \z
+% 
+% \begin{verbatim}
+% \ea
+% \glll 狗       叫     了。\\
+%       gou3     jiao4   le\\
+%       dog      bark    \textsc{asp/crs}\\
+% \glt `The dog is barking.'/`The dogs are barking.'
+% \z
+% \end{verbatim}
 
-\begin{verbatim}
-\ea
-\glll 狗       叫     了。\\
-      gou3     jiao4   le\\
-      dog      bark    \textsc{asp/crs}\\
-\glt `The dog is barking.'/`The dogs are barking.'
-\z
-\end{verbatim}
-
-You can use up to \computer{{\bs}glllllll} if you need additional lines.
+% You can use up to \verb+\glllllll+ if you need additional lines.
 
 In some subdisciplines of linguistics (e.\,g.\ typology) the examples are written in italics as in the
 following example:
@@ -131,7 +131,7 @@ following example:
 This is done automatically according to the series you publish in. 
 % of course this is not true for the code above ... 
 
-If the series decides to use italics, it has to be ensured that structural markup like brackets are not typeset in italics. Use \computer{{\bs}ob} for opening brackets and \computer{{\bs}cb} for closing brackets. \computer{{\bs}op} and \computer{{\bs}cp} provide the same for parens.
+If the series decides to use italics, it has to be ensured that structural markup like brackets are not typeset in italics. Use \verb+\ob+ for opening brackets and \verb+\cb+ for closing brackets. \verb+\op+ and \verb+\cp+ provide the same for parens.
 \begin{verbatim}
 \ea
 \gll ein {\ob}interessantes  Beispiel{\cb}\\
@@ -147,7 +147,7 @@ If the series decides to use italics, it has to be ensured that structural marku
 \z 
 \is{glossing|)}\ispackagee{lsp-gb4e}
 
-In order to align the gloss with the beginning of the source word, and not with the bracket, you can use \computer{{\bs}hspaceThis\{[\}}
+In order to align the gloss with the beginning of the source word, and not with the bracket, you can use \verb+\hspaceThis\{[\+}
 
 \begin{verbatim}
 \ea
@@ -246,7 +246,7 @@ Ilmazzita kielet Ingrid. \jambox{(OVS)}
 }
 \zl
 
-The call of {\bs}jambox has to follow the linebreak after the gloss:
+The call of \jambox has to follow the linebreak after the gloss:
 \begin{verbatim}
 \ex[]{
 \label{ex-ingrid-kielet-ilmazzita}
@@ -256,7 +256,7 @@ The call of {\bs}jambox has to follow the linebreak after the gloss:
 }
 \end{verbatim}
 The distance from the right margin can be specified by passing the largest object to be placed in a
-jambox to {\bs}settowidth:
+jambox to \verb+\settowidth+:
 
 \ea 
 \settowidth\jamwidth{(German)}
@@ -279,7 +279,7 @@ jambox to {\bs}settowidth:
 
 
 \section{Trees: \texttt{forest}}
-Linguistic trees can be typeset with the \computer{forest} package. An example is given below.
+Linguistic trees can be typeset with the \verb+forest+ package. An example is given below.
 
 \begin{verbatim}
 \begin{forest}
@@ -304,7 +304,7 @@ Linguistic trees can be typeset with the \computer{forest} package. An example i
 ]
 \end{forest}
 
-A more complicated example, showing the power of the \computer{forest} package is given below
+A more complicated example, showing the power of the \verb+forest+ package is given below
 
 \begin{verbatim}
  \begin{forest}
@@ -451,7 +451,7 @@ by Chris Manning\ia{Chris Manning}.
 \end{avm}
 \end{verbatim}
 %
-The command {\bs}tp is defined as follows (the code is taken from Detmar
+The command \verb+\tp+ is defined as follows (the code is taken from Detmar
 Meurers'\ia{Detmar Meurers} \texttt{avm+}\ispackage{avm+}):
 \begin{verbatim}
 % command to fontify the type values of an avm 
@@ -560,187 +560,188 @@ This\is{Optimality Theory|(}\is{tabular} section just provides a simple example 
 \ECC
 \end{tabular}
 
-\section{Conversation transcripts} 
-To be completed.
+% \section{Conversation transcripts} 
+% To be completed.
 
-\section{Font issues and right to left scripts}
-
-Since\is{font|(} we are using \xelatex, all fonts that are installed in the cannonical font directories can be
-used. We are using the font Linux Libertine, which is unicode-based and contains a lot of
-the characters linguists want to use.
-
-\subsection{Chinese}
-\label{sec-Chinese}
-
-You can enter Chinese\il{Chinese}\is{Chinese Characters} characters directly and mix them with ASCII text without any further markup
-provided you load the \texttt{xeCJK}\ispackage{xeCJK} package. We already saw an example in (\ref{ex-chinese}) on
-page~\pageref{ex-chinese}. In order to type Chinese text, one has to load the \texttt{xeCJK} package
-with the option {\bs}indentfirst set to {\bs}false and select an appropriate font:
-\begin{verbatim}
-\usepackage[indentfirst=false]{xeCJK}
-\setCJKmainfont{SimSun}
-\end{verbatim}
-
-
-\subsection{Arabic script}
-
-Arabic script\is{Arabic Script}\il{Persian} is the most challenging script for typesetting since it is written from right to left
-and contains ligatures. If you load the \texttt{bidi} package, you can mix right to left and left to
-right text.\footnote{
-  Please have a look at the source code. The verbatim environment has difficulties to display Arabic
-  text and hence the call to \texttt{$\backslash$PRL} comes out scrambled.
-}
-
-\ea
+% \section{Font issues and right to left scripts}
+% 
+% Since\is{font|(} we are using \xelatex, all fonts that are installed in the cannonical font directories can be
+% used. We are using the font Linux Libertine, which is unicode-based and contains a lot of
+% the characters linguists want to use.
+% 
+% \subsection{Chinese}
+% \label{sec-Chinese}
+% 
+% You can enter Chinese\il{Chinese}\is{Chinese Characters} characters directly and mix them with ASCII text without any further markup
+% provided you load the \texttt{xeCJK}\ispackage{xeCJK} package. We already saw an example in (\ref{ex-chinese}) on
+% page~\pageref{ex-chinese}. In order to type Chinese text, one has to load the \texttt{xeCJK} package
+% with the option \indentfirst set to \false and select an appropriate font:
+% \begin{verbatim}
+% \usepackage[indentfirst=false]{xeCJK}
+% \setCJKmainfont{SimSun}
+% \end{verbatim}
+% 
+% 
+% \subsection{Arabic script}
+% 
+% Arabic script\is{Arabic Script}\il{Persian} is the most challenging script for typesetting since it is written from right to left
+% and contains ligatures. If you load the \texttt{bidi} package, you can mix right to left and left to
+% right text.\footnote{
+%   Please have a look at the source code. The verbatim environment has difficulties to display Arabic
+%   text and hence the call to \texttt{$\backslash$PRL} comes out scrambled.
+% }
+% 
+% \ea
+% % \PRL{او مرد را دوست نخواهد داشت.}\\
+%  \gll U      mard rā        dust   naxāhad        dāšt.\\
+%       He/she man  {\scshape dom} friend {\scshape neg}.want have\\
+% \glt `He/she will not love the man.'
+% \z
+% 
+% %\begin{rtlverbatim}
+% %\usepackage{fontspec}
+% \begin{verbatim}
+% \newfontfamily\Parsifont[Script=Arabic]{XB Niloofar}
+% \usepackage{bidi}
+% \newcommand{\PRL}[1]{\RL{\Parsifont #1}}
+% 
+% \ea
 % \PRL{او مرد را دوست نخواهد داشت.}\\
- \gll U      mard rā        dust   naxāhad        dāšt.\\
-      He/she man  {\scshape dom} friend {\scshape neg}.want have\\
-\glt `He/she will not love the man.'
-\z
-
-%\begin{rtlverbatim}
-%\usepackage{fontspec}
-\begin{verbatim}
-\newfontfamily\Parsifont[Script=Arabic]{XB Niloofar}
-\usepackage{bidi}
-\newcommand{\PRL}[1]{\RL{\Parsifont #1}}
-
-\ea
-\PRL{او مرد را دوست نخواهد داشت.}\\
-\gll U      mard rā       dust   naxāhad        dāšt.\\
-     He/she man {\scshape dom} friend {\scshape neg}.want have\\
-\glt `He/she will not love the man.'
-\z
-\end{verbatim}
-%\end{rtlverbatim}
-
-\subsection{Hebrew}
-
-Hebrew\il{Hebrew|(} is also written from right to left. The characters are part of Linux Libertine, so no extra
-font has to be loaded to set examples like \REF{ex:latex:hebrew}:
-\ea\label{ex:latex:hebrew}
-% \RL{האישה קוראת ספר.}\\
-\gll   ha-'iša          qore't                            sefer.\\
-       {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
-\glt `The woman is reading a book.'
-\z
-% \begin{fitverb}
-\ea
-% \RL{האישה קוראת ספר.}\\
-\gll   ha-'iša          qore't                            sefer.\\
-       {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
-\glt `The woman is reading a book.'
-\z
-% \end{fitverb}
-\il{Hebrew|)}
-
-\subsection{IPA symbols}
-
-The\is{IPA symbols|(} IPA symbols are part of the Linux Libertine font and hence can be entered into the document
-directly. The IPA unicode symbols can be created online at
-\url{http://ipa.typeit.org/full/}. \REF{ex:showcases:IPA} shows some examples:
-\ea\label{ex:showcases:IPA}
-ɓ ɐ ʁ ɾ ɻ ʃ ʂ θ~  t͡ʃ~  t͡s  ʈ ʊ ʊ̈ ʉ ʌ ʋ ʍ ɯ ɰ χ ʎ ɣ ʏ ɤ ʒ ʐ ʑ ʔ ʕ ʢ ʡ ɑ̃ ɔ ˧ ˨ ˩ ˩˥ ˥˩ ˦˥
-\z
-% ⱱ does not work  
-If you find symbols that are not covered by the font, please use the \texttt{tipa} package.
-\is{font|)}\is{IPA symbols|)}
- 
-% \section{Bells and whistles}
-% 
-% \section{\texttt{varioref}}
-% 
-% \texttt{varioref}\ispackageb{varioref} is loaded by the \lsp class file. You can use {\bs}vref \iscommand{vref} to refer to floating
-% objects like figures and tables. \latex automatically determines whether the floating object is on
-% the same page or further away. If the float is on the next page and the next page is to the right of
-% the current page, \latex will insert an appropriate text like \emph{on the facing page}. If we are
-% on a right page, \latex will insert something like \emph{on the next page} or \emph{on the facing page}. If the float is further
-% away, a page number will be provided.
-% \ispackagee{varioref}
-% 
-% %Please use \verb+\vref+ for the first reference to a float only.
-% 
-% 
-% \section{\texttt{german} for hyphenation}
-% 
-% If\is{hyphenation|(}\ispackageb{german} you write things like {\bs}head-driven or very long paths like
-% {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}, \LaTeX{} does not do hyphenation
-% (in the part following the dash).
-% 
-% german.sty+ provides additional markup that allows for proper hyphenation:
-% \begin{verbatim}
-% head"=driven
-% 
-% {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}
+% \gll U      mard rā       dust   naxāhad        dāšt.\\
+%      He/she man {\scshape dom} friend {\scshape neg}.want have\\
+% \glt `He/she will not love the man.'
+% \z
 % \end{verbatim}
-% With this markup even long paths like {\scshape snysem$|$loc$|$cat$|$""head$|$""mod$|$""loc$|$""cat$|$""head}
-% are typeset properly. Alternatively you my write
-% \begin{verbatim}
-% {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod}
-% \end{verbatim}
-% which introduces a dash at the place of the linebreak:
-% {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod$|$\-loc$|$\-cat$|$\-head}.
+% %\end{rtlverbatim}
 % 
-% If you use german.sty for a book whose primary language is not German, do not forget to
-% specify the language you are using. For example, if your book is in US English you have to specify
-% the following:
-% \begin{verbatim}
-% \selectlanguage{USenglish}
-% \end{verbatim}
-% Otherwise the section name for references comes out in German.
-% \is{hyphenation|)}\ispackagee{german}
+% \subsection{Hebrew}
 % 
-% \section{Resizing large objects}
+% Hebrew\il{Hebrew|(} is also written from right to left. The characters are part of Linux Libertine, so no extra
+% font has to be loaded to set examples like \REF{ex:latex:hebrew}:
+% \ea\label{ex:latex:hebrew}
+% % \RL{האישה קוראת ספר.}\\
+% \gll   ha-'iša          qore't                            sefer.\\
+%        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
+% \glt `The woman is reading a book.'
+% \z
+% % \begin{fitverb}
+% \ea
+% % \RL{האישה קוראת ספר.}\\
+% \gll   ha-'iša          qore't                            sefer.\\
+%        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
+% \glt `The woman is reading a book.'
+% \z
+% % \end{fitverb}
+% \il{Hebrew|)}
 % 
-% Trees and AVMs often are too big to fit onto one page. The \texttt{langsci} comes with commands for
-% shrinking large objects. You may pass your complex object as an argument to \texttt{\oneline} and
-% this will scale the object to {\bs}linewidth (the remaining space on the current line). There is
-% a more clever version of this command: {\bs}centerfit. This command checks whether there is
-% enough space for an object and if this is the case it centers it in the line. If the object is
-% larger than the {\bs}linewidth, it is resized to fit the line. This is very handy for typesetting
-% figures. You may copy and paste figures to other documents with a different text width without any
-% adaptations.
+% \subsection{IPA symbols}
 % 
+% The\is{IPA symbols|(} IPA symbols are part of the Linux Libertine font and hence can be entered into the document
+% directly. The IPA unicode symbols can be created online at
+% \url{http://ipa.typeit.org/full/}. \REF{ex:showcases:IPA} shows some examples:
+% \ea\label{ex:showcases:IPA}
+% ɓ ɐ ʁ ɾ ɻ ʃ ʂ θ~  t͡ʃ~  t͡s  ʈ ʊ ʊ̈ ʉ ʌ ʋ ʍ ɯ ɰ χ ʎ ɣ ʏ ɤ ʒ ʐ ʑ ʔ ʕ ʢ ʡ ɑ̃ ɔ ˧ ˨ ˩ ˩˥ ˥˩ ˦˥
+% \z
+% % ⱱ does not work  
+% If you find symbols that are not covered by the font, please use the \texttt{tipa} package.
+% \is{font|)}\is{IPA symbols|)}
+%  
+% % \section{Bells and whistles}
+% % 
+% % \section{\texttt{varioref}}
+% % 
+% % \texttt{varioref}\ispackageb{varioref} is loaded by the \lsp class file. You can use \vref \iscommand{vref} to refer to floating
+% % objects like figures and tables. \latex automatically determines whether the floating object is on
+% % the same page or further away. If the float is on the next page and the next page is to the right of
+% % the current page, \latex will insert an appropriate text like \emph{on the facing page}. If we are
+% % on a right page, \latex will insert something like \emph{on the next page} or \emph{on the facing page}. If the float is further
+% % away, a page number will be provided.
+% % \ispackagee{varioref}
+% % 
+% % %Please use \verb+\vref+ for the first reference to a float only.
+% % 
+% % 
+% % \section{\texttt{german} for hyphenation}
+% % 
+% % If\is{hyphenation|(}\ispackageb{german} you write things like \head-driven or very long paths like
+% % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}, \LaTeX{} does not do hyphenation
+% % (in the part following the dash).
+% % 
+% % german.sty+ provides additional markup that allows for proper hyphenation:
+% % \begin{verbatim}
+% % head"=driven
+% % 
+% % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}
+% % \end{verbatim}
+% % With this markup even long paths like {\scshape snysem$|$loc$|$cat$|$""head$|$""mod$|$""loc$|$""cat$|$""head}
+% % are typeset properly. Alternatively you my write
+% % \begin{verbatim}
+% % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod}
+% % \end{verbatim}
+% % which introduces a dash at the place of the linebreak:
+% % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod$|$\-loc$|$\-cat$|$\-head}.
+% % 
+% % If you use german.sty for a book whose primary language is not German, do not forget to
+% % specify the language you are using. For example, if your book is in US English you have to specify
+% % the following:
+% % \begin{verbatim}
+% % \selectlanguage{USenglish}
+% % \end{verbatim}
+% % Otherwise the section name for references comes out in German.
+% % \is{hyphenation|)}\ispackagee{german}
+% % 
+% % \section{Resizing large objects}
+% % 
+% % Trees and AVMs often are too big to fit onto one page. The \texttt{langsci} comes with commands for
+% % shrinking large objects. You may pass your complex object as an argument to \texttt{\oneline} and
+% % this will scale the object to \linewidth (the remaining space on the current line). There is
+% % a more clever version of this command: \centerfit. This command checks whether there is
+% % enough space for an object and if this is the case it centers it in the line. If the object is
+% % larger than the \linewidth, it is resized to fit the line. This is very handy for typesetting
+% % figures. You may copy and paste figures to other documents with a different text width without any
+% % adaptations.
+% % 
+% % 
+% % %% \begin{figure}[htb]
+% % %% \centerfit{%
+% % %% \begin{tikzpicture}
+% % %% \tikzset{level 1+/.style={level distance=3\baselineskip}}
+% % %% \tikzset{level 2+/.style={level distance=5\baselineskip}}
+% % %% \tikzset{level 3+/.style={level distance=6\baselineskip}}
+% % %% \tikzset{level 4/.style={level distance=7\baselineskip}}
+% % %% \tikzset{level 5+/.style={level distance=5\baselineskip}}
+% % %% \tikzset{frontier/.style={distance from root=26\baselineskip}}
+% % %% %% \Tree[.{\ms[np-passive-cx]{ vform & passive \\
+% % %% %%                             subj & \sliste{ NP\ind{1} }\\[2mm]
+% % %% %%                             comps & \sliste{ (PP[\type{by}]\ind{2}) }\\
+% % %% %%                           } }
+% % %% %%         \ms{ vform & psp \\
+% % %% %%              subj & \sliste{ NP\ind{2} }\\[2mm]
+% % %% %%              comps & \sliste{ NP\ind{1} } 
+% % %% %%            } ]
+% % %% \Tree[.S
+% % %%        [.{\ibox{1} NP\ind{2}} \edge[roof]; {the boy} ]
+% % %%        [.VP\feattab{
+% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % %%                  \comps  \sliste{  }}
+% % %%          [.V\feattab{
+% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % %%                  \comps  \sliste{ \ibox{3} }} was ]
+% % %%          [.{\ibox{3} VP\feattab{
+% % %%                  \vform \type{passive},\\
+% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % %%                  \comps  \sliste{ }}} \edge node[auto=left]{Passive Construction};
+% % %%            [.V\feattab{
+% % %%                  \vform \type{psp},\\
+% % %%                  \subj  \sliste{ NP },\\
+% % %%                  \comps  \sliste{ NP\ind{2} }} 
+% % %%              [.V\feattab{
+% % %%                  \vform \type{psp},\\
+% % %%                  \subj  \sliste{ NP },\\
+% % %%                  \comps  \sliste{ NP\ind{2}, \ibox{4} }} given ] \edge node[auto=left]{Schema for Passive Participles};
+% % %%              [.{\ibox{4} NP} \edge[roof]; { the ball } ] ] ] ] ] 
+% % %% \end{tikzpicture}
+% % %% }
+% % %% \caption{\label{fig-the-boy-was-given-the-ball-tseng}Analysis of \emph{The boy was given the ball} according to \citet{Tseng2007a}}
+% % %% \end{figure}
 % 
-% %% \begin{figure}[htb]
-% %% \centerfit{%
-% %% \begin{tikzpicture}
-% %% \tikzset{level 1+/.style={level distance=3\baselineskip}}
-% %% \tikzset{level 2+/.style={level distance=5\baselineskip}}
-% %% \tikzset{level 3+/.style={level distance=6\baselineskip}}
-% %% \tikzset{level 4/.style={level distance=7\baselineskip}}
-% %% \tikzset{level 5+/.style={level distance=5\baselineskip}}
-% %% \tikzset{frontier/.style={distance from root=26\baselineskip}}
-% %% %% \Tree[.{\ms[np-passive-cx]{ vform & passive \\
-% %% %%                             subj & \sliste{ NP\ind{1} }\\[2mm]
-% %% %%                             comps & \sliste{ (PP[\type{by}]\ind{2}) }\\
-% %% %%                           } }
-% %% %%         \ms{ vform & psp \\
-% %% %%              subj & \sliste{ NP\ind{2} }\\[2mm]
-% %% %%              comps & \sliste{ NP\ind{1} } 
-% %% %%            } ]
-% %% \Tree[.S
-% %%        [.{\ibox{1} NP\ind{2}} \edge[roof]; {the boy} ]
-% %%        [.VP\feattab{
-% %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% %%                  \comps  \sliste{  }}
-% %%          [.V\feattab{
-% %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% %%                  \comps  \sliste{ \ibox{3} }} was ]
-% %%          [.{\ibox{3} VP\feattab{
-% %%                  \vform \type{passive},\\
-% %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% %%                  \comps  \sliste{ }}} \edge node[auto=left]{Passive Construction};
-% %%            [.V\feattab{
-% %%                  \vform \type{psp},\\
-% %%                  \subj  \sliste{ NP },\\
-% %%                  \comps  \sliste{ NP\ind{2} }} 
-% %%              [.V\feattab{
-% %%                  \vform \type{psp},\\
-% %%                  \subj  \sliste{ NP },\\
-% %%                  \comps  \sliste{ NP\ind{2}, \ibox{4} }} given ] \edge node[auto=left]{Schema for Passive Participles};
-% %%              [.{\ibox{4} NP} \edge[roof]; { the ball } ] ] ] ] ] 
-% %% \end{tikzpicture}
-% %% }
-% %% \caption{\label{fig-the-boy-was-given-the-ball-tseng}Analysis of \emph{The boy was given the ball} according to \citet{Tseng2007a}}
-% %% \end{figure}
