--- a/latexguidelines/indexers.tex
+++ b/latexguidelines/indexers.tex
@@ -5,16 +5,16 @@ For the various ways to add entries to the index, refer to \tabref{tab:latex:ind
 \begin{table}[h]
 \caption{Commands for creating index entries.}
 \label{tab:latex:indexentriese}
- \begin{tabular}{p{2.5cm}>{\tt\small\raggedright}p{6.5cm}l}
+ \begin{tabular}{p{2.5cm}>{\small\raggedright}p{6.5cm}l}
   \lsptoprule
   type & \rm\normalsize command & indexed term \\
   \midrule
-  Subject Index& Nominalized sentences \textbf{$\setminus$is{nominalization}} are current. & nomina\-lization \\
-  \mbox{Subject Index} identical& ... while \textbf{$\setminus$isi{nominalization}} is less frequent ...  & nomina\-lization \\[2em]
-  Language Index & Varieties of Chinese \textbf{$\setminus$il{Sinitic languages}} differ in that ...& Sinitic languages \\
-  Language Index identical& The \textbf{$\setminus$ili{Sinitic languages}}, \mbox{however}, ... & Sinitic languages \\[2em]
-  Author Index & In Homeric \textbf{$\setminus$ia{Homer}} language, ...  & Homer\\
-  \mbox{Author Index} identical & This contradicts \textbf{$\setminus$iai{Homer}}, who had advocated ... & Homer \\
+  Subject Index& \verb+Nominalized sentences+ \verb+\is{nominalization} are+ \verb+common.+ & nomina\-lization \\
+  \mbox{Subject Index} identical& \verb+... while \isi{nominalization}+ \verb+ is less frequent ...+  & nomina\-lization \\[2em]
+  Language Index & \verb+Varieties of Chinese+ \verb+\il{Sinitic languages}+ \verb+differ in that ...+ & Sinitic languages \\
+  Language Index identical& \verb+The \ili{Sinitic languages},+ \verb+however, ... + & Sinitic languages+ \\[2em]
+  Author Index & \verb+In Homeric \ia{Homer}+ \verb+language, ... + & Homer\\
+  \mbox{Author Index} identical & \verb+This contradicts+ \verb+\iai{Homer}, who had+ \verb+advocated ...+ & Homer \\
   \lspbottomrule
  \end{tabular}
 \end{table}
