--- a/latexguidelines/indexers.tex
+++ b/latexguidelines/indexers.tex
@@ -47,3 +47,4 @@ For the Name Index, make sure that every author has exactly one entry. Common er
 After your indexed terms are final, check the Name Index for terms which are not names. This happens if one of your cited works has an institution as the author. Open the \verb+.adx+ file and remove that entry. Be aware that a recompilation of your index will overwrite your changes.
 
 Check your index for overlong lines. Use hyphenations \verb+\mbox{...}+ or \verb+\newline+s in the \verb+.adx+ file to repair these. Again, a recompilation of the index will overwrite your changes.
+% Ja und ein Index ist auch sowas wie ein Inhaltsverzeichnis. Man kann dann zum Beispiel auf einen Blick sehen, dass es in dem Buch viel um Extraposition geht. Das ist mit dem Autorenindex übrigens genauso. Den braucht man theoretisch noch weniger als den Subject-Index, aber man sieht dann eben auf einen Blick, dass Haider viel zitiert wurde. 
