info about aspiration and secondary articulation

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -99,6 +99,7 @@ If an example consists of several sub-examples from different languages, the lan
 \z
 \z
 
+You should use the numbered example environment only for linguistic examples, theorems and the like. Lists of consultants, lists of recordings, lists of geographical places where a language is spoken and the like should be put in a table environment. 
 
 
 \subsection{Quotations}
@@ -141,6 +142,10 @@ Depending on the series and the language the book is published in authors may  u
 
 \subsection{Epigrams}
 You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
+
+\subsection{Aspiration, labialization, velarization etc}
+For phonetic symbols of aspiration and secondary articulation, do not use a superscript normal letter; use the special Unicode characters ʰ ʷ ʲ ˠ ˤ etc. You can define a special command like \verb+{\lab}+ for ʷ for easier input. 
+
 
 \section{Citations and references}
 \label{sec-references-authors}
