--- a/latexguidelines/introduction.tex
+++ b/latexguidelines/introduction.tex
@@ -1,2 +1,4 @@
 \chapter{Introduction}
 This document describes how to create a manuscript with Language Science Press. It discusses what authors, volume editors and the auxiliary roles of proofreaders, typesetters and indexers have to know in order to produce high quality books.
+
+This document is current as of \today. 
